Fixed Linux compile added macro ARCHIVE DESTINATION

--- a/libs/mpg123-1.25.6/CMakeLists.txt
+++ b/libs/mpg123-1.25.6/CMakeLists.txt
@@ -143,5 +143,5 @@ if (MPG123_BUILD_SHARED)
 		target_link_libraries(mpg123 Shlwapi)
 		set_property(TARGET mpg123 PROPERTY COMPILE_DEFINITIONS BUILD_MPG123_DLL)
 	endif()
-	install(TARGETS mpg123 RUNTIME DESTINATION . LIBRARY DESTINATION .)
+	install(TARGETS mpg123 RUNTIME DESTINATION . LIBRARY DESTINATION . ARCHIVE DESTINATION . )
 endif()
