lovejs with lua5.4.7 compiles successfully

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,6 +203,7 @@ endfunction()
 
 set(MEGA_ZLIB_VER "1.2.12")
 set(MEGA_LUA51_VER "5.1.5")
+set(MEGA_LUA54_VER "5.4.7")
 set(MEGA_LUAJIT_VER "2.1.0-e826d0c")
 ## set(MEGA_LUAJIT_VER "2.1.0-0bee44c") # known good
 set(MEGA_LIBOGG_VER "1.3.2")
@@ -236,6 +237,13 @@ message(STATUS "-----------------------------------------------------")
 add_subdirectory("libs/lua-${MEGA_LUA51_VER}" ${CMAKE_BINARY_DIR}/lua51)
 set(MEGA_LUA51 lua51)
 register_module(TARGET lua51)
+
+message(STATUS "-----------------------------------------------------")
+message(STATUS "Configuring: lua ${MEGA_LUA54_VER}")
+message(STATUS "-----------------------------------------------------")
+add_subdirectory("libs/lua-${MEGA_LUA54_VER}" ${CMAKE_BINARY_DIR}/lua54)
+set(MEGA_LUA54 lua54)
+register_module(TARGET lua54)
 
 message(STATUS "-----------------------------------------------------")
 message(STATUS "Configuring: libogg ${MEGA_LIBOGG_VER}")
@@ -333,10 +341,14 @@ if(MSVC)
 		BUILD_COMMAND "${MEGA_LUAJIT_SOURCE_DIR}/megabuild.bat" $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:debug> $<$<NOT:$<CONFIG:Debug>>:amalg>
 		INSTALL_COMMAND cmake -E make_directory ${CMAKE_BINARY_DIR}/bin
 			COMMAND cmake -E copy ${MEGA_LUAJIT_SOURCE_DIR}/src/lua51.dll ${CMAKE_BINARY_DIR}/bin
-			COMMAND cmake -E copy ${MEGA_LUAJIT_SOURCE_DIR}/src/lua51.lib ${CMAKE_BINARY_DIR}/bin)
+			COMMAND cmake -E copy ${MEGA_LUAJIT_SOURCE_DIR}/src/lua51.lib ${CMAKE_BINARY_DIR}/bin
+                        COMMAND cmake -E copy ${MEGA_LUAJIT_SOURCE_DIR}/src/lua54.dll ${CMAKE_BINARY_DIR}/bin
+			COMMAND cmake -E copy ${MEGA_LUAJIT_SOURCE_DIR}/src/lua54.lib ${CMAKE_BINARY_DIR}/bin)
 
 	set(MEGA_LUAJIT_LIB ${CMAKE_BINARY_DIR}/bin/lua51.lib)
 	set(MEGA_LUAJIT_DLL ${CMAKE_BINARY_DIR}/bin/lua51.dll)
+	set(MEGA_LUAJIT_LIB ${CMAKE_BINARY_DIR}/bin/lua54.lib)
+	set(MEGA_LUAJIT_DLL ${CMAKE_BINARY_DIR}/bin/lua54.dll)        
 	set(MEGA_LUAJIT_INCLUDE ${MEGA_LUAJIT_SOURCE_DIR}/src)
 
 endif()
@@ -344,6 +356,7 @@ endif()
 set(MEGA_3P
 	${MEGA_ZLIB}
 	${MEGA_LUA51}
+        ${MEGA_LUA54}
 	${MEGA_LIBOGG}
 	${MEGA_LIBVORBIS}
 	${MEGA_LIBVORBISFILE}
@@ -388,4 +401,5 @@ if (NOT EMSCRIPTEN)
   add_move_dll(megatest ${MEGA_SDL2})
   add_move_dll(megatest ${MEGA_OPENAL})
   add_move_dll(megatest ${MEGA_LUA51})
+  add_move_dll(megatest ${MEGA_LUA54})
 endif(NOT EMSCRIPTEN)
